[tool.poetry]
name = "dlt_example"
version = "0.1.0"
description = ""
authors = ["James You <james.jy.you@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
dlt = {extras = ["az", "databricks"], version = "^1.3.0"}
pip = "^24.3.1"
streamlit = "^1.39.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
